--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 @font-face {
+  font-family: Notable;
+  src: url("./assets/font/Notable-Regular.ttf");
+}
+@font-face {
   font-family: Montserrat;
   src: url("./assets/font/Montserrat-Regular.ttf");
 }
@@ -6,48 +10,71 @@
   font-family: "Montserrat-SemiBold";
   src: url("./assets/font/Montserrat-SemiBold.ttf");
 }
+:root {
+  /* Colors */
+  --main-color: #32a7b6;
+  --secondary-color: white;
+  --dark-accent: #2e6066;
+  --primary-text-color: #191f1f;
+  --secondary-text-color: #2a3536;
+  --light-text-color: #8e8e93;
+
+  /* Text size */
+  --desktop-font-size: 20px;
+  --tablet-font-size: 16px;
+  --mobile-font-size: 14px;
+}
 
 * {
   box-sizing: border-box;
   font-family: Montserrat, sans-serif, system-ui, -apple-system;
-  font-size: 20px;
-}
-#selected {
-  background-image: url("./assets/svg/rectangle.svg");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-#selected a{
-  color: #262727;
+  font-size: var(--desktop-font-size);
 }
 body {
   margin: 0;
+  padding-top: 35px;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   text-align: center;
-  background-color: #1C8F97;
+  background-color: var(--main-color);
+  color: var(--secondary-text-color);
+  overflow-x: hidden;
 }
 h1 {
+  font-family: Notable, sans-serif, system-ui, -apple-system;
   font-size: 3.2rem;
+  color: var(--primary-text-color);
+  margin: 0;
+}
+h2,
+h3 {
+  font-family: Montserrat-SemiBold, sans-serif, system-ui, -apple-system;
+  margin: 0;
 }
 h2 {
-  font-family: Montserrat-SemiBold, sans-serif, system-ui, -apple-system;
   font-size: 1.8rem;
 }
 h3 {
-  font-family: Montserrat-SemiBold, sans-serif, system-ui, -apple-system;
   font-size: 1.4rem;
 }
+header {
+  padding: 0 15%;
+}
 main {
-  flex-grow: 1;
-  background-color: white;
+  display: flex;
+  justify-content: space-around;
+  background-color: var(--secondary-color);
   border-radius: 20px;
+  padding: 0 15%;
+  flex-grow: 1;
+  overflow: hidden;
 }
 footer p {
   margin: 0;
-  padding: 20px 0;
+  padding: 25px 0;
+  color: var(--light-accent);
+  font-weight: bold;
 }
 nav ul {
   display: flex;
@@ -66,10 +93,66 @@ nav ul li a {
   text-decoration: none;
   color: white;
 }
-img {
-  display: inline;
+#selected {
+  background-image: url("./assets/svg/rectangle.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  min-width: 272px;
 }
-div {
+#selected a {
+  color: var(--secondary-text-color);
+}
+.inicio-content {
+  z-index: 1;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 40px;
+  max-width: 50%;
+}
+.inicio-image {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.inicio-image img {
+  flex-shrink: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+.presentation {
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 20px;
+}
+.presentation h3 {
+  color: var(--light-text-color);
+}
+.button {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 20px;
+  gap: 5px;
+  width: 185px;
+  height: 60px;
+  background: var(--dark-accent);
+  text-decoration: none;
+  border-radius: 20px;
+}
+.button h3 {
+  color: var(--secondary-color);
+}
+.button:hover {
+  border: 1px solid var(--dark-accent);
+  background-color: var(--secondary-color);
+}
+.button:hover h3 {
+  color: var(--dark-accent);
 }
