--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ main {
   background-color: var(--secondary-color);
   border-radius: 20px;
   padding: 0 15%;
-  gap: 50px;
+  gap: 2rem;
   flex-grow: 1;
   overflow: hidden;
 }
@@ -169,7 +169,6 @@ nav ul {
 nav ul li {
   height: inherit;
   display: inline-flex;
-  width: 100%;
   align-items: center;
   justify-content: center;
 }
@@ -243,7 +242,6 @@ button {
   justify-content: center;
   align-items: center;
   padding: 1rem 1.5rem;
-  gap: 5px;
   background: var(--dark-accent);
   text-decoration: none;
   border-radius: 20px;
@@ -282,7 +280,7 @@ form {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  gap: 20px;
+  gap: 1rem;
 }
 label {
   text-align: left;
@@ -313,7 +311,7 @@ textarea {
   display: flex;
   flex-direction: column;
   width: 60%;
-  gap: 20px;
+  gap: 1rem;
 }
 
 /* Responsive */
@@ -328,6 +326,7 @@ textarea {
   body {
     min-height: 100dvh;
     padding: 0;
+    overflow: hidden;
   }
   header {
     display: flex;
@@ -355,7 +354,6 @@ textarea {
     align-items: center;
     justify-content: space-between;
     padding-left: 0;
-    /* flex: 1; */
   }
   #desktop-navbar {
     display: none;
@@ -404,7 +402,7 @@ textarea {
     text-align: center;
   }
   .inicio-image {
-    max-width: 80%;
+    max-width: 100%;
   }
   .form-input {
     width: 100%;
