--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ main {
   background-color: var(--secondary-color);
   border-radius: 20px;
   padding: 0 15%;
-  gap: 50px;
+  gap: 2rem;
   flex-grow: 1;
   overflow: hidden;
 }
@@ -169,7 +169,6 @@ nav ul {
 nav ul li {
   height: inherit;
   display: inline-flex;
-  width: 100%;
   align-items: center;
   justify-content: center;
 }
@@ -232,6 +231,10 @@ nav ul li a:hover::after {
 .presentation h3 {
   color: var(--light-text-color);
 }
+.presentation h1,
+.presentation h3 {
+  text-shadow: 0 0 20px #ffffff77;
+}
 button {
   border: none;
   cursor: pointer;
@@ -243,7 +246,6 @@ button {
   justify-content: center;
   align-items: center;
   padding: 1rem 1.5rem;
-  gap: 5px;
   background: var(--dark-accent);
   text-decoration: none;
   border-radius: 20px;
@@ -282,7 +284,7 @@ form {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  gap: 20px;
+  gap: 1rem;
 }
 label {
   text-align: left;
@@ -313,14 +315,16 @@ textarea {
   display: flex;
   flex-direction: column;
   width: 60%;
-  gap: 20px;
+  gap: 1rem;
 }
 
 /* Responsive */
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   * {
     font-size: var(--tablet-font-size);
   }
+}
+@media (max-width: 768px) {
   h2,
   div {
     direction: ltr;
@@ -328,6 +332,7 @@ textarea {
   body {
     min-height: 100dvh;
     padding: 0;
+    overflow: hidden;
   }
   header {
     display: flex;
@@ -355,7 +360,6 @@ textarea {
     align-items: center;
     justify-content: space-between;
     padding-left: 0;
-    /* flex: 1; */
   }
   #desktop-navbar {
     display: none;
@@ -404,7 +408,7 @@ textarea {
     text-align: center;
   }
   .inicio-image {
-    max-width: 80%;
+    max-width: 100%;
   }
   .form-input {
     width: 100%;
