--- a/style.css
+++ b/style.css
@@ -348,7 +348,7 @@ textarea {
     height: 95dvh;
     flex-grow: 0;
     padding: 0 25% 0 10%;
-    overflow: hidden auto;
+    overflow: hidden;
   }
   footer {
     height: 5dvh;
